
syntax = "proto3";


// generar archivo .pb.go  $ protoc  ./app/mcs/grpc/proto/radicacionmcs.proto --go_out=plugins=grpc:./


option java_multiple_files = true;
option java_package = "app.mcs.grpc.proto";
option java_outer_classname = "radicacionmcs";

package radicacionmcs;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
